k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-fitness-service
  namespace: aceest-fitness
  labels:
    app: aceest-fitness
spec:
  type: LoadBalancer
  selector:
    app: aceest-fitness
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  sessionAffinity: ClientIP
---
apiVersion: v1
kind: Service
metadata:
  name: aceest-fitness-nodeport
  namespace: aceest-fitness
  labels:
    app: aceest-fitness
spec:
  type: NodePort
  selector:
    app: aceest-fitness
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    nodePort: 30080
    protocol: TCP
